/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2012-11-26 06:40 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/vm/fm.c
    ! pacify BCC warnings when HB_NO_VM_ALL is defined

  * include/thread.h
  * source/rtl/arc4.c          
  * source/rtl/console.c        
  * source/rtl/hbsocket.c      
  * source/rtl/hbserv.c        
  * source/rtl/filenet.c       
  * source/rtl/trace.c         
  * source/rtl/filebuf.c       
  * source/rdd/hsx/hsx.c       
  * source/macro/macro.y       
  * source/macro/macroyy.c     
  * source/vm/thread.c         
  + source/vm/consmt.c         
  + source/vm/hbservmt.c       
  + source/vm/rddmt.c          
    ! reorganize MT lock and unlock functions by moving them to more appropriate
    files.

2012-11-25 07:43 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/macro/macro.y
    ! left over: HB_MACRO_PTR -> PHB_MACRO

2012-11-24 20:09 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/rtl/teditor.prg
    ! wrapped words were cut off when formatting, fixed.

2012-11-24 13:43 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/rtl/teditor.prg
    ! fixed routine for line-reformatting invoked by pressing CTRL-B

2012-11-22 20:36 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/vm/macro.c
    ! increase macro string size to 4096 (this should be enough IMO)

2012-11-22 08:25 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * include/item.api
  * include/hbapi.h
  * include/hbapierr.h
  * include/hbapirdd.h
  * include/hbstack.h
  * include/hbvmpub.h
  * source/ct/ctnet.c
  * source/rdd/wafunc.c
  * source/rdd/nulsys/nulsys.c
  * source/rtl/bkgtsks.c
  * source/rtl/idle.c
  * source/vm/arrays.c
  * source/vm/classes.c
  * source/vm/codebloc.c
  * source/vm/estack.c
  * source/vm/garbage.c
  * source/vm/hvm.c
  * source/vm/itemapi.c